[project]
name = "comfyui-yanc"
description = "NOTE: Concatenate Strings, Format Datetime String, Integer Caster, Multiline String, Truncate String. Yet Another Node Collection, a repository of simple nodes for ComfyUI. This repository eases the addition or removal of custom nodes to itself."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ka-puna/comfyui-yanc"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-yanc"
Icon = ""
